coding done for: CSS Grid & Cards [56:00].

--- a/Coursework/css/style.css
+++ b/Coursework/css/style.css
@@ -13,8 +13,7 @@
     --super-dark-blue: #243e5f; /* this is good*/ 
     --black :#000000;
     --white :#fff;
-    --light :#aed2fa;
-    
+    --light : #f4f4f6ee;
 }
 
 body{
@@ -103,7 +102,8 @@ img{
     padding: 10px 0 40px;
 }
 
-.video-content{
+.video-content{  /* for some reason this cant be .video. video-content
+    without buttom moving to the left*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -118,9 +118,58 @@ img{
     padding: 40px 0;
 }
 
-.testimonials .testimonials-heading{
+.testimonials-heading{
     width: 700px;
-    margin-bottom: 40px;
+    margin-bottom: 400px;
+}
+
+.testimonials-grid {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);  /* OR without repeat 1fr 1fr 1fr ; */
+    gap: 30px;  /*create a gap between the cards */ 
+
+}
+/* choosing the second paragraph */
+.testimonials .card p:nth-child(2){
+    margin-top:  30px;
+    margin-bottom: 15px; /* own exta*/
+    font-weight: bold;
+
+}
+
+/* Pricing */
+
+.pricing .pricing-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+    margin-top: 50px;
+    
+}
+
+.pricing .pricing-card-subheading {
+    margin-bottom: 30px;
+}
+
+.pricing .pricing-card-price {
+    margin-bottom: 30px;
+    padding: 20px 0;
+    border-bottom: 1px solid #ccc;
+}
+
+.pricing ul {
+    margin: 30px 0;
+}
+.pricing ul li {
+    margin-bottom: 20px;
+}
+
+.pricing ul li i{
+    margin-right: 10px;
+}
+
+.pricing .pricing-footer {
+    margin: 30px 0;
 }
 
 /* utility classes*/
@@ -137,6 +186,13 @@ img{
     padding: 0 15px;
     
 }
+/* Card  moved from the bottom*/
+.card {
+    background: var(--white);
+    color: var(--black);
+    border-radius: 10px;
+    padding: 20px;
+}
 
 /* here are the buttons */
 .btn{
@@ -149,6 +205,7 @@ img{
     border: none;
     border-radius:  10px;
     cursor: pointer;
+    text-align: center;
     transition: 0.5s;
 }
 
