--- a/Project/Css/style.css
+++ b/Project/Css/style.css
@@ -94,12 +94,22 @@ img{
     margin-bottom: 50px;
 }
 
+.text3{
+    color: var(--white);
+    font-size: 1.5rem;
+    font-weight: 600;
+}
 
 /* Footer*/
 
 .footer{
     padding: 40px 0;
     margin-top: 50px;
+}
+
+.footer-grid {
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -139,6 +149,13 @@ img{
     opacity: 0.8;
 }
 
+
+.btn-pushed:hover {
+    background: coral;
+    color: var(--white)!important; /* this overrides earlier styles*/
+    opacity: 1;  /* text from black to white*/
+}
+
 .btn-white{
     background: var(--white);
     color: var(--black);
@@ -149,10 +166,12 @@ img{
     color: #fff;
 }
 
-.btn-brown {
-    background:#84523f;
-    color:#000;
+.btn-pushed {
+    background:coral;
+    color:var(--black);
+    transition: color 0.5s ease-in-out;
 }
+
 
 
 /* Text Classes */
